--- a/styles.css
+++ b/styles.css
@@ -238,6 +238,7 @@ section.resume-section {
   padding-top: 5rem;
   padding-bottom: 5.5rem;
   max-width: 75rem;
+  min-height: 100vh;
 }
 section.resume-section .resume-section-content {
   width: 100%;
