--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-:root {
-  --bs-primary-rgb: 189, 93, 56;
-}
-
 * {
   box-sizing: border-box;
 }
@@ -129,13 +125,12 @@ a:hover {
 }
 
 .text-primary {
-  --bs-text-opacity: 1;
-  color: rgba(var(--bs-primary-rgb), var(--bs-text-opacity)) !important;
+  color: rgb(189, 93, 56) !important;
 }
 
 .bg-primary {
   --bs-bg-opacity: 1;
-  background-color: rgba(var(--bs-primary-rgb), var(--bs-bg-opacity)) !important;
+  background-color: rgb(189, 93, 56) !important;
 }
 
 .rounded-circle {
